# edule

./: Cargo.toml
data/: courses.json  rooms.json
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js
migrations/v1/: setup.sql
src/: auth.rs  db.rs  main.rs  models.rs
src/routes/: auth_routes.rs  department_routes.rs  mod.rs  room_routes.rs  room_type_routes.rs  test_routes.rs
static/: index.html
static/js/: app.js
