[package]
name = "edule"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "macros] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"