[package]
name = "edule"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
csv = "1.3"
printpdf = "0.7"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }